[package]
name = "cuda-decision"
version = "0.1.0"
edition = "2021"
description = "Decision-making with weighted scoring and confidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-decision"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
